# editor_bot

./: .env  alembic.ini  data.db  main.py  pyproject.toml  session_name.session
alembic/versions/: 2024_10_09_1317-3efb721191b0_initial.py  2024_10_10_1409-ac160155fea3_initial.py  2024_10_13_1737-1730420a49bf_initial.py  2024_10_14_1251-a3dd28539cc8_initial.py
core/: config.py
core/models/: __init__.py  admin.py  article.py  db_helper.py  event.py  publication.py  thematic_block.py
core/repositories/: __init__.py  admin.py  article.py  base.py  event.py  publication.py  thematic_block.py
routers/: admin.py  command.py  events.py  publication_schedule.py  thematic_blocks.py
utils/: adm.py  create_keyboard.py  events.py  rerate.py  shedule.py  telegram.py
